fix jwilkes/purr-data#26 custom comment width not respected when editing update css property word-wrap to overflow-wrap

--- a/pd/nw/css/c64.css
+++ b/pd/nw/css/c64.css
@@ -167,7 +167,7 @@ mark.console_find_highlighted {
     color: #a49aea; /* text color */
     background-color: transparent;
     white-space: pre;
-    word-wrap: break-word;
+    overflow-wrap: break-word;
     -webkit-margin-before: 0px;
 }
 
