--- a/pd/nw/css/extended.css
+++ b/pd/nw/css/extended.css
@@ -160,7 +160,7 @@ mark.console_find_highlighted {
     /* box-shadow: inset 1px 0px 0px 1px #000; */
     background-color: transparent;
     white-space: pre;
-    word-wrap: break-word;
+    overflow-wrap: break-word;
     -webkit-margin-before: 0px;
 }
 
