--- a/pd/nw/css/strongbad.css
+++ b/pd/nw/css/strongbad.css
@@ -169,7 +169,7 @@ mark.console_find_highlighted {
     color: #4bd046;
     background-color: transparent;
     white-space: pre;
-    word-wrap: break-word;
+    overflow-wrap: break-word;
     -webkit-margin-before: 0px;
 }
 
