--- a/pd/nw/css/vanilla_inverted.css
+++ b/pd/nw/css/vanilla_inverted.css
@@ -173,7 +173,7 @@ mark.console_find_highlighted {
     color: white; /* text color */
     background-color: transparent;
     white-space: pre;
-    word-wrap: break-word;
+    overflow-wrap: break-word;
     -webkit-margin-before: 0px;
 }
 
